[package]
name = "terraphim_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
bench = false
path = "src/bin/main.rs"
name = "terraphim-config"

[dependencies]
opendal = { version = "0.44.2", features = ["services-dashmap", "services-sled","services-atomicserver"] }
tokio = { version = "1.35.1", features = ["full","fs", "macros", "rt-multi-thread"] }
log = "0.4"
tracing = { version = "0.1"}
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "tracing-log",
] }
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
serde_path_to_error = "0.1"
toml = "0.8.6"
persistence = {path="../persistence"}
async-trait = "0.1.74"
dirs = "5.0.0"
anyhow = "1"
url = "2.3.1"
async-once-cell = "0.5.3"
ulid = {version = "1.0.0",features=["serde","uuid"]}
thiserror = "1.0.53"
