[package]
name = "terraphim_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
bench = false
path = "src/bin/main.rs"
name = "terraphim-config"

[dependencies]
tokio = { version = "1.35.1", features = ["full","fs", "macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "tracing-log",
] }
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
toml = "0.8.6"
persistence = {path="../persistence"}
async-trait = "0.1.74"
ulid = {version = "1.0.0",features=["serde","uuid"]}
thiserror = "1.0.53"
