[package]
name = "terraphim_config"
version = "0.1.0"
edition = "2021"

[[bin]]
bench = false
path = "src/bin/main.rs"
name = "terraphim-config"

[dependencies]
terraphim_rolegraph = { path = "../terraphim_rolegraph" }
terraphim_types = { path = "../../terraphim_types" }
terraphim_automata = { path = "../terraphim_automata" }

opendal = { version = "0.44.2", features = [
  "services-dashmap",
  "services-sled",
  "services-atomicserver",
] }
tokio = { version = "1.35.1", features = [
  "full",
  "fs",
  "macros",
  "rt-multi-thread",
] }
log = "0.4"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "tracing-log",
] }
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
toml = "0.8.6"
persistence = { path = "../persistence" }
async-trait = "0.1.74"
ahash = { version = "0.8.8", features = ["serde"] }
dirs = "5.0.0"
anyhow = "1"
url = { version = "2.3.1", features = ["serde"] }
async-once-cell = "0.5.3"
ulid = { version = "1.0.0", features = ["serde", "uuid"] }
thiserror = "1.0.53"
