[package]
name = "atlassian_haystack"
version = "1.0.0"
edition.workspace = true
license = "MIT"

[dependencies]
haystack_core = { path = "../haystack_core" }
terraphim_types = { path = "../terraphim_types" }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

tokio = { workspace = true, features = ["full"] }

serde = { workspace = true, features = ["derive"] }

serde_json = { workspace = true }

clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
anyhow = { workspace = true, features = ["std"] }

chrono = { workspace = true, features = ["serde"] }

base64 = "0.21"
url = "2.5"

[dev-dependencies]
mockito = "1.5"
tokio-test = "0.4"
