[package]
name = "atlassian_haystack"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Atlassian haystack provider for Terraphim AI"
documentation = "https://terraphim.ai"
homepage = "https://terraphim.ai"
repository = "https://github.com/terraphim/terraphim-ai"
keywords = ["ai", "atlassian", "haystack", "integration"]
license = "MIT"
readme = "../../README.md"

[dependencies]
haystack_core = { version = "1.20.3", registry = "terraphim" }
terraphim_types = { version = "1.20.2", registry = "terraphim" }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

tokio = { workspace = true, features = ["full"] }

serde = { workspace = true, features = ["derive"] }

serde_json = { workspace = true }

clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
anyhow = { workspace = true, features = ["std"] }

chrono = { workspace = true, features = ["serde"] }

base64 = "0.21"
url = "2.5"

[dev-dependencies]
mockito = "1.5"
tokio-test = "0.4"
