[package]
name = "haystack_core"
version.workspace = true
edition.workspace = true
authors = ["Terraphim"]
description = "Core traits and types for Terraphim haystack integrations"
license = "MIT"
repository = "https://github.com/terraphim/terraphim-ai"

[dependencies]
terraphim_types = { path = "../terraphim_types", version = "1.0.0" }
