[package]
name = "discourse_haystack"
version = "1.0.0"
edition.workspace = true
authors = ["Terraphim"]
description = "A CLI client for fetching Discourse posts and messages"
license = "MIT"
repository = "https://github.com/terraphim/discourse_haystack"

[dependencies]
haystack_core = { path = "../haystack_core" }
terraphim_types = { path = "../terraphim_types" }
clap = { version = "4.5.60", features = ["derive", "env"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

tokio = { workspace = true, features = ["full"] }

serde = { workspace = true, features = ["derive"] }

serde_json = { workspace = true }

anyhow = { workspace = true }

url = "2.5.8"

[dev-dependencies]
wiremock = "0.6.4"

[[bin]]
name = "discourse_haystack"
path = "src/main.rs"
