[package]
name = "discourse_haystack"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Terraphim <team@terraphim.ai>"]
description = "A CLI client for fetching Discourse posts and messages"
documentation = "https://terraphim.ai"
homepage = "https://terraphim.ai"
license = "MIT"
repository = "https://github.com/terraphim/terraphim-ai"
keywords = ["ai", "discourse", "haystack", "cli", "posts"]
readme = "../../README.md"

[dependencies]
haystack_core = { version = "1.20.3", registry = "terraphim" }
terraphim_types = { version = "1.20.2", registry = "terraphim" }
clap = { version = "4.5.60", features = ["derive", "env"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

tokio = { workspace = true, features = ["full"] }

serde = { workspace = true, features = ["derive"] }

serde_json = { workspace = true }

anyhow = { workspace = true }

url = "2.5.8"

[dev-dependencies]
wiremock = "0.6.4"

[[bin]]
name = "discourse_haystack"
path = "src/main.rs"
