[package]
name = "grepapp_haystack"
version.workspace = true
edition.workspace = true
authors = ["Terraphim"]
description = "Grep.app integration for searching code across GitHub repositories"
license = "MIT"
repository = "https://github.com/terraphim/terraphim-ai"

[dependencies]
haystack_core = { path = "../haystack_core", version = "1.0.0" }
terraphim_types = { path = "../terraphim_types", version = "1.0.0" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0", features = ["std"] }
url = "2.5"
tracing = "0.1"

[dev-dependencies]
wiremock = "0.6.4"
tokio-test = "0.4"
