[package]
name = "grepapp_haystack"
version.workspace = true
edition.workspace = true
authors = ["Terraphim"]
description = "Grep.app integration for searching code across GitHub repositories"
license = "MIT"
repository = "https://github.com/terraphim/terraphim-ai"

[dependencies]
haystack_core = { path = "../haystack_core", version = "1.0.0" }
terraphim_types = { path = "../terraphim_types", version = "1.0.0" }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

tokio = { workspace = true, features = ["full"] }

serde = { workspace = true, features = ["derive"] }

serde_json = { workspace = true }

anyhow = { workspace = true, features = ["std"] }

url = "2.5"
tracing = { workspace = true }


[dev-dependencies]
wiremock = "0.6.4"
tokio-test = "0.4"
