[package]
name = "grepapp_haystack"
version.workspace = true
edition.workspace = true
authors = ["Terraphim <team@terraphim.ai>"]
description = "Grep.app integration for searching code across GitHub repositories"
documentation = "https://terraphim.ai"
homepage = "https://terraphim.ai"
license = "MIT"
repository = "https://github.com/terraphim/terraphim-ai"
keywords = ["ai", "grep", "github", "code-search", "haystack"]
readme = "../../README.md"

[dependencies]
haystack_core = { path = "../haystack_core", version = "1.19.2" }
terraphim_types = { path = "../terraphim_types", version = "1.0.0" }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

tokio = { workspace = true, features = ["full"] }

serde = { workspace = true, features = ["derive"] }

serde_json = { workspace = true }

anyhow = { workspace = true, features = ["std"] }

url = "2.5"
tracing = { workspace = true }


[dev-dependencies]
wiremock = "0.6.4"
tokio-test = "0.4"
