[package]
name = "jmap_client"
version = "1.0.0"
edition.workspace = true
license = "MIT"

[dependencies]
haystack_core = { path = "../haystack_core" }
terraphim_types = { path = "../terraphim_types" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0", features = ["std"] }
base64 = "0.21"
clap = { version = "4.0", features = ["derive"] }

[lib]
name = "jmap_client"
path = "src/lib.rs"

[[bin]]
name = "jmap_search"
path = "src/main.rs"
