[package]
name = "haystack_jmap"
version = "1.0.0"
edition.workspace = true
license = "MIT"

[dependencies]
haystack_core = { path = "../haystack_core" }
terraphim_types = { path = "../terraphim_types" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
wiremock = "0.6.4"

[lib]
name = "haystack_jmap"
path = "src/lib.rs"

[[bin]]
name = "jmap_search"
path = "src/main.rs"
