[package]
name = "haystack_jmap"
version = "1.0.0"
edition.workspace = true
license = "MIT"

[dependencies]
haystack_core = { path = "../haystack_core" }
terraphim_types = { path = "../terraphim_types" }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

tokio = { workspace = true, features = ["full"] }

serde = { workspace = true, features = ["derive"] }

serde_json = { workspace = true }

anyhow = { workspace = true, features = ["std"] }

clap = { version = "4.5", features = ["derive"] }
log = { workspace = true }

env_logger = "0.11"

[dev-dependencies]
wiremock = "0.6.4"

[lib]
name = "haystack_jmap"
path = "src/lib.rs"

[[bin]]
name = "jmap_search"
path = "src/main.rs"
