[package]
name = "terraphim_middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
terraphim_config = { path = "../config" }
terraphim_rolegraph = { path = "../terraphim_rolegraph" }
terraphim_automata = { path = "../terraphim_automata" }
terraphim_types = { path = "../../terraphim_types" }
persistence = { path = "../persistence" }

ahash = { version = "0.8.8", features = ["serde"] }
cached = { version = "0.47.0", features = ["async", "serde", "ahash"] }
log = "0.4"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.110"
thiserror = "1.0.56"
tokio = { version = "1.15.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
ulid = { version = "1.0.0", features = ["serde", "uuid"] }
url = "2.5.0"
