[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
terraphim_settings = { path = "../settings" }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "tracing-log",
] }

async-once-cell = "0.5.3"
async-trait = "0.1.74"
dirs = "5.0.0"
log = "0.4"
opendal = { version = "0.44.2", features = [
  "services-dashmap",
  "services-redis",
  "services-sled",
] }
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.56"
tokio = { version = "1.27", features = ["fs", "macros", "rt-multi-thread"] }
tracing = { version = "0.1" }
twelf = { version = "0.13", features = [
  "json",
  "toml",
  "env",
  "clap",
  "shellexpand",
] }
url = "2.3.1"

[dev-dependencies]
tempfile = "3.7.1"
terraphim_config = { path = "../config" }

[features]
default = ["services-dashmap", "services-sled", "services-atomicserver"]
# Enable services dashmap support
services-dashmap = ["opendal/services-dashmap"]
# Enable services ipfs support
services-ipfs = ["opendal/services-ipfs"]
# Enable services redis support
services-redis = ["opendal/services-redis"]
# Enable services rocksdb support
services-rocksdb = ["opendal/services-rocksdb"]
# Enable services sled support
services-sled = ["opendal/services-sled"]
# Enable services atomic server
services-atomicserver = ["opendal/services-atomicserver"]

