[package]
name = "terraphim-config-opendal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opendal = { version = "0.39.0", features = ["services-dashmap", "services-redis", "services-sled"] }
tokio = { version = "1.27", features = ["fs", "macros", "rt-multi-thread"] }
log = "0.4"
tracing = { version = "0.1"}
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "tracing-log",
] }
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
serde_path_to_error = "0.1"
