[package]
name = "terraphim-markdown-parser"
version = "1.0.0"
edition.workspace = true
authors = ["Terraphim Contributors"]
description = "Terraphim Markdown Parser"
documentation = "https://terraphim.ai"
homepage = "https://terraphim.ai"
repository = "https://github.com/terraphim/terraphim-ai"
keywords = ["personal-assistant", "ai", "privacy", "agent", "terraphim"]
license = "Apache-2.0"
readme = "../../README.md"

[dependencies]
markdown = "1.0.0-alpha.21"
terraphim_types = { path = "../terraphim_types", version = "1.0.0" }
thiserror = "1.0"
ulid = { version = "1.0.0", features = ["serde", "uuid"] }
