[package]
name = "terraphim_agent_application"
version = "0.1.0"
edition = "2021"
description = "OTP-style application behavior for Terraphim agent system"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
async-trait = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }

# Configuration and file handling
config = "0.14"
toml = "0.8"
notify = "6.0"

# Terraphim dependencies
terraphim_agent_supervisor = { path = "../terraphim_agent_supervisor" }
terraphim_agent_messaging = { path = "../terraphim_agent_messaging" }
terraphim_agent_registry = { path = "../terraphim_agent_registry" }
terraphim_kg_orchestration = { path = "../terraphim_kg_orchestration" }
terraphim_kg_agents = { path = "../terraphim_kg_agents" }
terraphim_task_decomposition = { path = "../terraphim_task_decomposition" }
terraphim_goal_alignment = { path = "../terraphim_goal_alignment" }
terraphim_types = { path = "../terraphim_types" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"