[package]
name = "terraphim_agent_application"
version = "1.0.0"
edition.workspace = true
description = "OTP-style application behavior for Terraphim agent system"
documentation = "https://terraphim.ai"
homepage = "https://terraphim.ai"
repository = "https://github.com/terraphim/terraphim-ai"
keywords = ["ai", "agents", "otp", "application", "supervision"]
license = "MIT OR Apache-2.0"
readme = "../../README.md"

[dependencies]
# Core dependencies
async-trait = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }

# Configuration and file handling
config = "0.14"
toml = "0.8"
notify = "6.0"

# Terraphim dependencies
terraphim_agent_supervisor = { version = "1.19.2", registry = "terraphim" }
terraphim_agent_messaging = { version = "1.19.2", registry = "terraphim" }
terraphim_agent_registry = { version = "1.19.2", registry = "terraphim" }
terraphim_kg_orchestration = { version = "1.0.0", registry = "terraphim" }
terraphim_kg_agents = { path = "../terraphim_kg_agents" }
terraphim_task_decomposition = { version = "1.0.0", registry = "terraphim" }
terraphim_goal_alignment = { version = "1.0.0", registry = "terraphim" }
terraphim_types = { version = "1.20.2", registry = "terraphim" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
